--- a/A_5026201006_B.html
+++ b/A_5026201006_B.html
@@ -98,16 +98,19 @@
 
     </script>
     <style>
-        h6 {
+        h5 {
             text-align: center;
         }
 
-        .center{
+        .center {
             display: flex;
             justify-content: center;
             align-items: center;
         }
 
+        .tab{
+            padding-left: 140px;
+        }
     </style>
 </head>
 
@@ -118,12 +121,12 @@
         <p>Jesselyne</p>
         <p>5026201006</p>
         <div class="header">
-            <h6>FORM INPUT DATA BARANG</h6>
+            <h5>Form Input Data Barang</h5>
         </div>
         <br>
         <form action="https://www.bukalapak.com/" class="form" name="form">
             <div class="form-group">
-                <label for="namabarang">Nama Barang :</label>
+                <label for="namabarang">Nama Barang<div class="tab">:</div></label>
                 <input type="text" id="namabarang" name="namabarang">
                 <div id="benar1" class="collapse">
                     <i class="fas fa-check-circle" style="color:#2ecc71"></i>
@@ -138,7 +141,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <label for="harga">Harga : </label>
+                <label for="harga">Harga <div class="tab">:</div> </label>
                 <input type="text" id="harga" name="harga">
                 <div id="benar2" class="collapse">
                     <i class="fas fa-check-circle" style="color:#2ecc71"></i>
@@ -157,7 +160,7 @@
                 </div>
             </div>
             <div class="form-group ">
-                <label for="jenis">Jenis Barang :</label>
+                <label for="jenis">Jenis Barang<div class="tab">:</div></label>
                 <select id="jenis">
                     <option value=""></option>
                     <option value="makanan">Makanan</option>
@@ -173,7 +176,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <label for="kode">Kode Barcode</label>
+                <label for="kode">Kode Barcode<div class="tab">:</div></label>
                 <input type="text" id="kode" name="kode">
                 <div id="benar4" class="collapse">
                     <i class="fas fa-check-circle" style="color:#2ecc71"></i>
@@ -188,8 +191,8 @@
                 </div>
             </div>
             <div class="center">
-            <button style='margin-right:20px' type="submit" id="submit" class="btn btn-primary" value="Submit">Submit</button>
-            <button type="reset" class="btn btn-success">Reset</button>
+                <button style='margin-right:20px' type="submit" id="submit" class="btn btn-primary">Kirim</button>
+                <button type="reset" class="btn btn-success">Reset</button>
             </div>
         </form>
     </div>
